# CookieCrusadersRepo

./: .gitmodules  Measurements.md  requirements.txt
ESP(Arduino)/ESP/: .gitignore  platformio.ini
ESP(Arduino)/ESP/lib/: camera.h
ESP(Arduino)/ESP/src/: camera.cpp  main.cpp
ESP(espressif-idf)/espressifESP/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.esp32cam  sdkconfig.esp32cam.old
ESP(espressif-idf)/espressifESP/components/MyLib/: CMakeLists.txt
ESP(espressif-idf)/espressifESP/components/MyLib/include/: camera.h  detection.h  facialDetection.h
ESP(espressif-idf)/espressifESP/components/MyLib/src/: camera.cpp  detection.cpp  network.cpp  server.cpp
ESP(espressif-idf)/espressifESP/src/: CMakeLists.txt  main.cpp
Pico/blink/: CMakeLists.txt
Pico/kws_features/: CMakeLists.txt
Pico/kws_features/src/: audio.c  audio.h  config.h  main.c  mfcc.c  mfcc.h
Test/: RecieveImage.py  SteamLog.py
flask/app/: __init__.py  config.py
flask/app/routes/: esp.py  test.py  web.py
flask/app/services/: facial_detection.py
flask/app/static/css/: styles.css
flask/app/static/js/: home.js  nav.js
flask/app/templates/: base.html  index.html
